--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Delicias Dulces - Repostería Artesanal</title>
+    <title>Curso de Programación Web - Aprende a Programar</title>
     <style>
         * {
             margin: 0;
@@ -13,162 +13,178 @@
         }
 
         body {
-            line-height: 1.6;
+            background-color: #f0f2f5;
         }
 
-        header {
-            background-color: #fff8f0;
-            padding: 20px;
-            text-align: center;
-        }
-
-        nav {
-            background-color: #ffd7b5;
-            padding: 15px;
-            text-align: center;
-        }
-
-        nav a {
-            margin: 0 15px;
-            text-decoration: none;
-            color: #333;
+        .navbar {
+            background: #1a73e8;
+            padding: 1rem 2rem;
+            color: white;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
         }
 
         .hero {
-            background-image: url('https://cdn.pixabay.com/photo/2016/11/29/11/38/bread-1869159_1280.jpg');
-            background-size: cover;
-            background-position: center;
-            height: 400px;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            color: white;
-            text-shadow: 2px 2px 4px rgba(0,0,0,0.5);
-        }
-
-        .hero-content {
             text-align: center;
+            padding: 4rem 2rem;
+            background: linear-gradient(45deg, #1a73e8, #0d47a1);
+            color: white;
         }
 
-        .services {
-            padding: 50px 20px;
-            background-color: #fff;
-        }
-
-        .service-grid {
+        .features {
             display: grid;
             grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-            gap: 30px;
-            max-width: 1200px;
-            margin: 0 auto;
+            gap: 2rem;
+            padding: 4rem 2rem;
         }
 
-        .service-card {
-            text-align: center;
-            padding: 20px;
+        .feature-card {
+            background: white;
+            padding: 2rem;
             border-radius: 10px;
-            box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+            box-shadow: 0 2px 10px rgba(0,0,0,0.1);
         }
 
-        .contact-section {
-            background-color: #f9f9f9;
-            padding: 50px 20px;
-            text-align: center;
+        .contact-btn {
+            background: #ff6d00;
+            color: white;
+            padding: 0.8rem 2rem;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+            font-size: 1rem;
         }
 
-        .contact-form {
-            max-width: 600px;
-            margin: 0 auto;
+        .modal {
+            display: none;
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: rgba(0,0,0,0.5);
+            justify-content: center;
+            align-items: center;
+        }
+
+        .modal-content {
+            background: white;
+            padding: 2rem;
+            border-radius: 10px;
+            width: 90%;
+            max-width: 500px;
         }
 
         .form-group {
-            margin-bottom: 20px;
+            margin-bottom: 1rem;
         }
 
         input, textarea {
             width: 100%;
-            padding: 10px;
-            margin-top: 5px;
+            padding: 0.8rem;
             border: 1px solid #ddd;
-            border-radius: 5px;
+            border-radius: 4px;
+            margin-top: 0.5rem;
         }
 
-        button {
-            background-color: #ff9f4d;
+        .submit-btn {
+            background: #1a73e8;
             color: white;
-            padding: 12px 30px;
+            padding: 0.8rem 2rem;
             border: none;
-            border-radius: 25px;
+            border-radius: 5px;
             cursor: pointer;
-            font-size: 16px;
-        }
-
-        button:hover {
-            background-color: #ff8c3a;
-        }
-
-        footer {
-            background-color: #333;
-            color: white;
-            text-align: center;
-            padding: 20px;
+            width: 100%;
         }
     </style>
 </head>
 <body>
-    <header>
-        <h1>🍰 Delicias Dulces</h1>
-        <p>Repostería artesanal hecha con amor</p>
-    </header>
-
-    <nav>
-        <a href="#inicio">Inicio</a>
-        <a href="#servicios">Servicios</a>
-        <a href="#contacto">Contacto</a>
+    <nav class="navbar">
+        <h2>CodeMaster</h2>
+        <button class="contact-btn" onclick="openModal()">Contacto</button>
     </nav>
 
     <section class="hero">
-        <div class="hero-content">
-            <h2>Dulces momentos hechos realidad</h2>
-            <p>Postres personalizados para ocasiones especiales</p>
+        <h1>Aprende Programación Web desde Cero</h1>
+        <p>Domina HTML, CSS y JavaScript con nuestro curso intensivo</p>
+    </section>
+
+    <section class="features">
+        <div class="feature-card">
+            <h3>HTML5</h3>
+            <p>Aprende la estructura fundamental de la web</p>
+        </div>
+        <div class="feature-card">
+            <h3>CSS3</h3>
+            <p>Diseña interfaces profesionales y responsivas</p>
+        </div>
+        <div class="feature-card">
+            <h3>JavaScript</h3>
+            <p>Crea interactividad y lógica de negocio</p>
         </div>
     </section>
 
-    <section class="services" id="servicios">
-        <div class="service-grid">
-            <div class="service-card">
-                <h3>Pasteles de Bodas</h3>
-                <p>Creaciones elegantes para tu día especial</p>
-            </div>
-            <div class="service-card">
-                <h3>Cupcakes Creativos</h3>
-                <p>Pequeñas delicias con diseños únicos</p>
-            </div>
-            <div class="service-card">
-                <h3>Postres Saludables</h3>
-                <p>Opciones bajas en azúcar y sin gluten</p>
-            </div>
+    <div id="contactModal" class="modal">
+        <div class="modal-content">
+            <h2>Formulario de Contacto</h2>
+            <form id="contactForm" onsubmit="sendEmail(event)">
+                <div class="form-group">
+                    <label>Nombre:</label>
+                    <input type="text" name="name" required>
+                </div>
+                <div class="form-group">
+                    <label>Email:</label>
+                    <input type="email" name="email" required>
+                </div>
+                <div class="form-group">
+                    <label>Mensaje:</label>
+                    <textarea name="message" rows="4" required></textarea>
+                </div>
+                <button type="submit" class="submit-btn">Enviar</button>
+            </form>
         </div>
-    </section>
+    </div>
 
-    <section class="contact-section" id="contacto">
-        <h2>¡Hagamos tu postre ideal!</h2>
-        <form class="contact-form" action="#" method="POST">
-            <div class="form-group">
-                <input type="text" name="name" placeholder="Tu nombre" required>
-            </div>
-            <div class="form-group">
-                <input type="email" name="email" placeholder="Tu correo electrónico" required>
-            </div>
-            <div class="form-group">
-                <textarea name="message" placeholder="Cuéntanos sobre tu evento y necesidades" rows="5" required></textarea>
-            </div>
-            <button type="submit">Enviar consulta</button>
-        </form>
-    </section>
+    <script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
+    <script>
+        // Inicializar EmailJS (Reemplaza con tus propios datos)
+        (function() {
+            emailjs.init('TU_USER_ID_DE_EMAILJS');
+        })();
 
-    <footer>
-        <p>© 2023 Delicias Dulces - Todos los derechos reservados</p>
-    </footer>
+        function openModal() {
+            document.getElementById('contactModal').style.display = 'flex';
+        }
+
+        function closeModal() {
+            document.getElementById('contactModal').style.display = 'none';
+        }
+
+        function sendEmail(e) {
+            e.preventDefault();
+            
+            // Reemplaza con tu Service ID y Template ID de EmailJS
+            const serviceID = 'TU_SERVICE_ID';
+            const templateID = 'TU_TEMPLATE_ID';
+
+            emailjs.sendForm(serviceID, templateID, e.target)
+                .then(() => {
+                    alert('Mensaje enviado correctamente');
+                    closeModal();
+                    document.getElementById('contactForm').reset();
+                }, (error) => {
+                    alert('Error al enviar el mensaje: ' + JSON.stringify(error));
+                });
+        }
+
+        // Cerrar modal al hacer click fuera del contenido
+        window.onclick = function(event) {
+            const modal = document.getElementById('contactModal');
+            if (event.target === modal) {
+                closeModal();
+            }
+        }
+    </script>
 </body>
 </html>
