--- a/index.html
+++ b/index.html
@@ -86,6 +86,7 @@
             border: 1px solid #ddd;
             border-radius: 4px;
             margin-top: 0.5rem;
+            resize: vertical;
         }
 
         .submit-btn {
