--- a/index.html
+++ b/index.html
@@ -1,191 +1,39 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Curso de Programación Web - Aprende a Programar</title>
-    <style>
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-            font-family: 'Arial', sans-serif;
-        }
-
-        body {
-            background-color: #f0f2f5;
-        }
-
-        .navbar {
-            background: #1a73e8;
-            padding: 1rem 2rem;
-            color: white;
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-        }
-
-        .hero {
-            text-align: center;
-            padding: 4rem 2rem;
-            background: linear-gradient(45deg, #1a73e8, #0d47a1);
-            color: white;
-        }
-
-        .features {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-            gap: 2rem;
-            padding: 4rem 2rem;
-        }
-
-        .feature-card {
-            background: white;
-            padding: 2rem;
-            border-radius: 10px;
-            box-shadow: 0 2px 10px rgba(0,0,0,0.1);
-        }
-
-        .contact-btn {
-            background: #ff6d00;
-            color: white;
-            padding: 0.8rem 2rem;
-            border: none;
-            border-radius: 5px;
-            cursor: pointer;
-            font-size: 1rem;
-        }
-
-        .modal {
-            display: none;
-            position: fixed;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            background: rgba(0,0,0,0.5);
-            justify-content: center;
-            align-items: center;
-        }
-
-        .modal-content {
-            background: white;
-            padding: 2rem;
-            border-radius: 10px;
-            width: 90%;
-            max-width: 500px;
-        }
-
-        .form-group {
-            margin-bottom: 1rem;
-        }
-
-        input, textarea {
-            width: 100%;
-            padding: 0.8rem;
-            border: 1px solid #ddd;
-            border-radius: 4px;
-            margin-top: 0.5rem;
-            resize: vertical;
-        }
-
-        .submit-btn {
-            background: #1a73e8;
-            color: white;
-            padding: 0.8rem 2rem;
-            border: none;
-            border-radius: 5px;
-            cursor: pointer;
-            width: 100%;
-        }
-    </style>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Landing Page</title>
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <nav class="navbar">
-        <h2>CodeMaster</h2>
-        <button class="contact-btn" onclick="openModal()">Contacto</button>
+  <header>
+    <nav>
+      <ul class="menu">
+        <li><button class="menu-btn" data-section="inicio">Inicio</button></li>
+        <li><button class="menu-btn" data-section="nosotros">Nosotros</button></li>
+        <li><button class="menu-btn" data-section="mision">Misión</button></li>
+        <li><button class="menu-btn" data-section="vision">Visión</button></li>
+        <li><button class="menu-btn" data-section="contacto">Contacto</button></li>
+        <li><button class="menu-btn" data-section="ubicacion">Ubicación</button></li>
+      </ul>
     </nav>
-
-    <section class="hero">
-        <h1>Aprende Programación Web desde Cero</h1>
-        <p>Domina HTML, CSS y JavaScript con nuestro curso intensivo</p>
-    </section>
-
-    <section class="features">
-        <div class="feature-card">
-            <h3>HTML5</h3>
-            <p>Aprende la estructura fundamental de la web</p>
-        </div>
-        <div class="feature-card">
-            <h3>CSS3</h3>
-            <p>Diseña interfaces profesionales y responsivas</p>
-        </div>
-        <div class="feature-card">
-            <h3>JavaScript</h3>
-            <p>Crea interactividad y lógica de negocio</p>
-        </div>
-    </section>
-
-    <div id="contactModal" class="modal">
-        <div class="modal-content">
-            <h2>Formulario de Contacto</h2>
-            <form id="contactForm" onsubmit="sendEmail(event)">
-                <div class="form-group">
-                    <label>Nombre:</label>
-                    <input type="text" name="name" required>
-                </div>
-                <div class="form-group">
-                    <label>Email:</label>
-                    <input type="email" name="email" required>
-                </div>
-                <div class="form-group">
-                    <label>Mensaje:</label>
-                    <textarea name="message" rows="4" required></textarea>
-                </div>
-                <button type="submit" class="submit-btn">Enviar</button>
-            </form>
-        </div>
+  </header>
+  
+  <!-- Ventana emergente modal -->
+  <div id="modal" class="modal">
+    <div class="modal-content">
+      <span class="close">&times;</span>
+      <div id="modal-body"></div>
     </div>
+  </div>
 
-    <script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
-    <script>
-        // Inicializar EmailJS (Reemplaza con tus propios datos)
-        (function() {
-            emailjs.init('TU_USER_ID_DE_EMAILJS');
-        })();
-
-        function openModal() {
-            document.getElementById('contactModal').style.display = 'flex';
-        }
-
-        function closeModal() {
-            document.getElementById('contactModal').style.display = 'none';
-        }
-
-        function sendEmail(e) {
-            e.preventDefault();
-            
-            // Reemplaza con tu Service ID y Template ID de EmailJS
-            const serviceID = 'TU_SERVICE_ID';
-            const templateID = 'TU_TEMPLATE_ID';
-
-            emailjs.sendForm(serviceID, templateID, e.target)
-                .then(() => {
-                    alert('Mensaje enviado correctamente');
-                    closeModal();
-                    document.getElementById('contactForm').reset();
-                }, (error) => {
-                    alert('Error al enviar el mensaje: ' + JSON.stringify(error));
-                });
-        }
-
-        // Cerrar modal al hacer click fuera del contenido
-        window.onclick = function(event) {
-            const modal = document.getElementById('contactModal');
-            if (event.target === modal) {
-                closeModal();
-            }
-        }
-    </script>
+  <!-- Contenido principal de la landing page -->
+  <section class="main-content">
+    <h1>Bienvenido a nuestra landing page</h1>
+    <p>Seleccione una opción del menú para ver más información.</p>
+  </section>
+  
+  <script src="script.js"></script>
 </body>
 </html>
